--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -159,22 +159,22 @@
               <img src="../img/sq02.png" alt="" class="img-fluid"></a>
             </div>
             <div class="col-12">
-              <img src="../img/sq03.png" alt="" class="img-fluid">
+              <img src="../img/bsq03.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/sq04.png" alt="" class="img-fluid">
+              <img src="../img/bsq04.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/sq05.png" alt="" class="img-fluid">
+              <img src="../img/bsq05.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/sq06.png" alt="" class="img-fluid">
+              <img src="../img/bsq06.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/sq7.png" alt="" class="img-fluid">
+              <img src="../img/bsq07.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/sq08.png" alt="" class="img-fluid">
+              <img src="../img/bsq08.png" alt="" class="img-fluid">
             </div>
           </div>
         </div>
