--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -986,11 +986,24 @@ figure.effect-zoe:hover h2 {
     margin-top: -40px;
 }
 
+@media (min-width: 1200px) {
+
+    .workimg {
+
+
+         max-width: 90% !important;
+        height: auto;
+    }
+}
+
 
 @media (max-width: 576px) {
     .workimg {
 
         margin-bottom: -130px;
+
+         max-width: 110% !important;
+        height: auto;
     }
 
     .text-responsive {
