--- a/views/envioExi.html
+++ b/views/envioExi.html
@@ -109,38 +109,14 @@
               <div class="row no-gutters">
                 <div class="col-lg-6">
                   <div class="contact-wrap w-100 p-md-5 p-4">
-                    <h3>¡Envianos tu mensaje!</h3>
+                    <br> 
+                    <div class="text-center">
+                    <h3>¡Gracias por enviarnos tu mensaje!</h3></div>
+
+                    <h5>Por favor aguarda, será respondido a la brevedad.</h5> <br> <br> 
+                      <a href="./contacto.html">
+                    <button type="button" class="btn btn-primary">Enviar nuevo mensaje</button></a>
                    
-                    <form action="../assets/php/procesar.php" method="get" id="contactForm" name="contactForm" class="contactForm">
-                      <div class="row">
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <input type="text" class="form-control" name="name" id="name" placeholder="Nombre">
-                          </div>
-                        </div>
-                        <div class="col-md-12"> 
-                          <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Email">
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Asunto">
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <textarea name="message" class="form-control" id="message" cols="30" rows="8" placeholder="¿En qué podemos ayudarte?"></textarea>
-                          </div>
-                        </div>
-                        <div class="col-md-12">
-                          <div class="form-group">
-                            <input type="submit" value="Enviar mensaje" class="btn btn-primary">
-                            <div class="submitting"></div>
-                          </div>
-                        </div>
-                      </div>
-                    </form>
                     
                   </div>
                 </div>
